# ml-tracking

./: .catalyst  .gitignore  README.md  pyproject.toml  train.py
conf/: config.yaml  env.yaml  hyperparams.yaml
conf/callbacks/checkpoints/: mnist.yaml
conf/callbacks/loggers/: mnist.yaml
conf/callbacks/metrics/: mnist.yaml
conf/dataloader/: small.yaml
conf/dataset/train/: mnist.yaml
conf/dataset/valid/: mnist.yaml
conf/model/: simple_conv.yaml  simple_mlp.yaml
conf/optimizer/: adam.yaml
conf/runner/: supervised.yaml
conf/scheduler/: cyclic.yaml
conf/stage/: eval.yaml  train.yaml
conf/transforms/: simple_conv_minimal.yaml  simple_mlp_minimal.yaml
modules/models/: simple_conv.py  simple_mlp.py
modules/utils/: random.py
